--- a/src/Hosts/Modulus.Host.Blazor/Components/_Imports.razor
+++ b/src/Hosts/Modulus.Host.Blazor/Components/_Imports.razor
@@ -5,6 +5,7 @@
 @using Modulus.Host.Blazor
 @using Modulus.Host.Blazor.Components
 @using Modulus.Host.Blazor.Shell.ViewModels
+@using Modulus.UI.Blazor.Components
 @using UiAppTheme = Modulus.UI.Abstractions.AppTheme
 @using UiMenuItem = Modulus.UI.Abstractions.MenuItem
 @using MudBlazor
