fix: move Context Menu and Page Lifecycle under Navigation group, fix badge clipping
- Move context-demo and lifecycle-demo into Navigation group
- Add mr-2 class to badges to prevent right edge clipping

--- a/src/Hosts/Modulus.Host.Blazor/Components/Layout/MainLayout.razor
+++ b/src/Hosts/Modulus.Host.Blazor/Components/Layout/MainLayout.razor
@@ -60,7 +60,7 @@
                                         <span>@item.DisplayName</span>
                                         @if (item.BadgeCount.HasValue && item.BadgeCount > 0)
                                         {
-                                            <MudBadge Content="@item.BadgeCount" Color="Color.Error" Overlap="false" />
+                                            <MudBadge Content="@item.BadgeCount" Color="Color.Error" Overlap="false" Class="mr-2" />
                                         }
                                     </div>
                                 }
