--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Blazor/ComponentsMainPage.razor
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Blazor/ComponentsMainPage.razor
@@ -49,7 +49,8 @@
                                             {
                                                 <MudBadge Content="@child.BadgeCount" 
                                                           Color="@GetBadgeColor(child.BadgeColor)" 
-                                                          Overlap="false" />
+                                                          Overlap="false"
+                                                          Class="mr-2" />
                                             }
                                         </div>
                                     </MudNavLink>
@@ -70,7 +71,8 @@
                                 {
                                     <MudBadge Content="@item.BadgeCount" 
                                               Color="@GetBadgeColor(item.BadgeColor)" 
-                                              Overlap="false" />
+                                              Overlap="false"
+                                              Class="mr-2" />
                                 }
                             </div>
                         </MudNavLink>
